--- a/usr.bin/file/file.1
+++ b/usr.bin/file/file.1
@@ -1,3 +1,4 @@
+.\" $MidnightBSD$
 .\" $FreeBSD: src/usr.bin/file/file.1,v 1.38 2007/05/25 09:25:05 ru Exp $
 .\" $Id: file.1,v 1.2 2008-12-09 18:32:15 laffer1 Exp $
 .Dd August 18, 2005
