add error handling

--- a/bin/date/date.1
+++ b/bin/date/date.1
@@ -31,7 +31,7 @@
 .\"
 .\"     @(#)date.1	8.3 (Berkeley) 4/28/95
 .\" $FreeBSD: src/bin/date/date.1,v 1.72 2005/02/13 22:25:09 ru Exp $
-.\" $MidnightBSD: src/bin/date/date.1,v 1.3 2008/06/30 02:45:42 laffer1 Exp $
+.\" $MidnightBSD$
 .\"
 .Dd May 7, 2015
 .Dt DATE 1
