--- a/usr.bin/batt/batt.1
+++ b/usr.bin/batt/batt.1
@@ -22,7 +22,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $MidnightBSD: src/usr.bin/batt/batt.1,v 1.4 2008/12/07 04:14:41 laffer1 Exp $
+.\" $MidnightBSD$
 .\"
 .Dd December 6, 2008
 .Dt BATT 1
