--- a/usr.bin/m4/m4.1
+++ b/usr.bin/m4/m4.1
@@ -1,3 +1,4 @@
+.\" $MidnightBSD$
 .\"	$NetBSD: m4.1,v 1.23 2012/04/08 22:00:39 wiz Exp $
 .\"	@(#) $OpenBSD: m4.1,v 1.59 2010/10/21 13:20:51 jmc Exp $
 .\"
