--- a/usr.bin/doas/doas.1
+++ b/usr.bin/doas/doas.1
@@ -1,3 +1,4 @@
+.\" $MidnightBSD$
 .\" $OpenBSD: doas.1,v 1.16 2016/06/11 04:38:21 tedu Exp $
 .\"
 .\"Copyright (c) 2015 Ted Unangst <tedu@openbsd.org>
