fix version check

--- a/sys/boot/common/loader.8
+++ b/sys/boot/common/loader.8
@@ -941,8 +941,8 @@ Does not work with
 .It arch-i386
 .Ic TRUE
 if the architecture is IA32.
-.It FreeBSD_version
-.Fx
+.It MidnightBSD_version
+.Mx
 version at compile time.
 .It loader_version
 .Nm
