fix some references

--- a/usr.sbin/bsdconfig/bsdconfig.8
+++ b/usr.sbin/bsdconfig/bsdconfig.8
@@ -107,7 +107,7 @@ Executes
 .It Cm docsinstall
 Executes the
 .Cm bsdinstall docsinstall
-sub-utility to allow installation/re-installation of the FreeBSD Documentation
+sub-utility to allow installation/re-installation of the MidnightBSD Documentation
 set(s).
 .It Cm dot
 Generate a graphviz
