--- a/usr.sbin/bsdconfig/bsdconfig.8
+++ b/usr.sbin/bsdconfig/bsdconfig.8
@@ -104,11 +104,6 @@ Shortcut to the Default Router/Gateway menu under networking.
 Manage disk partitions and/or labels.
 Executes
 .Xr sade 8 .
-.It Cm docsinstall
-Executes the
-.Cm bsdinstall docsinstall
-sub-utility to allow installation/re-installation of the MidnightBSD Documentation
-set(s).
 .It Cm dot
 Generate a graphviz
 .Xr dot 1
@@ -250,6 +245,6 @@ first appeared in
 .An Ron McDowell
 .An Devin Teske Aq dteske@FreeBSD.org
 .Sh BUGS
-The docsinstall and diskmgmt modules call bsdinstall.
+The diskmgmt modules call bsdinstall.
 Bugs found in these modules should be considered those of bsdinstall, not
 .Nm .
