--- a/contrib/groff/tmac/groff_mdoc.man
+++ b/contrib/groff/tmac/groff_mdoc.man
@@ -44,7 +44,7 @@
 .\" for an already extremely slow package.
 .\"
 .
-.Dd November 2, 2010
+.Dd September 8, 2013
 .Dt GROFF_MDOC 7
 .Os
 .
@@ -183,6 +183,7 @@ as follows:
 .    It "BSD Macro"
 .    It "NetBSD Macro"
 .    It "FreeBSD Macro"
+.    It "MidnightBSD Macro"
 .    It "DragonFly Macro"
 .    It "OpenBSD Macro"
 .    It "BSD/OS Macro"
@@ -870,20 +871,18 @@ the release ID.
 0.8, 0.8a, 0.9, 0.9a, 1.0, 1.0a, 1.1, 1.2, 1.2a, 1.2b, 1.2c, 1.2d, 1.2e,
 1.3, 1.3a, 1.4, 1.4.1, 1.4.2, 1.4.3, 1.5, 1.5.1, 1.5.2, 1.5.3, 1.6, 1.6.1,
 1.6.2, 1.6.3, 2.0, 2.0.1, 2.0.2, 2.0.3, 2.1, 3.0, 3.0.1, 3.0.2, 3.0.3,
-3.1, 3.1.1, 4.0, 4.0.1, 5.0, 5.0.1, 5.0.2, 5.1, 6.0
+3.1, 3.1.1, 4.0, 4.0.1, 5.0, 5.0.1, 5.0.2, 5.1, 6.0, 6.0.1
 .It FreeBSD
 1.0, 1.1, 1.1.5, 1.1.5.1, 2.0, 2.0.5, 2.1, 2.1.5, 2.1.6, 2.1.7, 2.2, 2.2.1,
 2.2.2, 2.2.5, 2.2.6, 2.2.7, 2.2.8, 3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 4.0, 4.1,
 4.1.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.6.2, 4.7, 4.8, 4.9, 4.10, 4.11, 5.0, 5.1,
 5.2, 5.2.1, 5.3, 5.4, 5.5, 6.0, 6.1, 6.2, 6.3, 6.4, 7.0, 7.1, 7.2, 7.3, 8.0,
-8.1, 8.2, 9.0
-.It OpenBSD
-2.0, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3.0, 3.1, 3.2, 3.3, 3.4,
-3.5, 3.6, 3.7, 3.8, 3.9, 4.0, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9,
-5.0
+8.1, 8.2, 8.3, 8.4, 9.0, 9.1, 9.2, 9.3,10.0, 10.1, 10.2, 10.3, 11
+.It MidnightBSD
+0.1, 0.2, 0.2.1, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9
 .It DragonFly
 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.8, 1.8.1, 1.10, 1.12, 1.12.2, 2.0, 2.2,
-2.4, 2.6, 2.8, 2.9, 2.9.1, 2.10, 2.10.1, 2.11
+2.4, 2.6, 2.8, 2.9, 2.9.1, 2.10, 2.10.1, 2.11, 3.0, 3.1, 3.2, 3.3, 3.4
 .It Darwin
 8.0.0, 8.1.0, 8.2.0, 8.3.0, 8.4.0, 8.5.0, 8.6.0, 8.7.0, 8.8.0, 8.9.0,
 8.10.0, 8.11.0, 9.0.0, 9.1.0, 9.2.0, 9.3.0, 9.4.0, 9.5.0, 9.6.0, 9.7.0,
@@ -2264,6 +2263,24 @@ command above in section
 .Fx
 .It Li ".Fx 2.2 ."
 .Fx 2.2 .
+.El
+.Pp
+For possible values of
+.Ao version Ac
+see the description of the
+.Ql .Os
+command above in section
+.Sx "TITLE MACROS" .
+.
+.Ss "MidnightBSD Macro"
+.
+.Dl Usage: .Mx Oo Ao version Ac 0c ...
+.Pp
+.Bl -tag -width ".Li .Mx\ 0.1\ ." -compact -offset 15n
+.It Li .Mx
+.Mx
+.It Li ".Mx 0.1 ."
+.Mx 0.1 .
 .El
 .Pp
 For possible values of
