--- a/share/man/man4/man4.i386/ce.4
+++ b/share/man/man4/man4.i386/ce.4
@@ -24,7 +24,7 @@
 .\"
 .\" $FreeBSD: stable/11/share/man/man4/man4.i386/ce.4 155158 2006-01-31 23:06:54Z rik $
 .\"
-.Dd January 30, 2006
+.Dd December 13, 2022
 .Dt CE 4 i386
 .Os
 .Sh NAME
@@ -49,6 +49,12 @@ Additional options:
 .Cd "device sppp"
 .Cd "options NETGRAPH"
 .Cd "options NETGRAPH_CRONYX"
+.Sh DEPRECATION NOTICE
+The
+.Nm
+driver is not present in
+.Fx 14.0
+and later.
 .Sh DESCRIPTION
 The
 .Nm
