--- a/lib/libc/gen/getosreldate.3
+++ b/lib/libc/gen/getosreldate.3
@@ -30,7 +30,7 @@
 .Sh NAME
 .Nm getosreldate
 .Nd get the value of
-.Dv __FreeBSD_version
+.Dv __MidnightBSD_version
 .Sh LIBRARY
 .Lb libc
 .Sh SYNOPSIS
@@ -66,7 +66,7 @@ return value.
 .El
 .Sh EXAMPLES
 An example can be found in
-.Pa /usr/share/examples/FreeBSD_version .
+.Pa /usr/share/examples/MidnightBSD_version .
 .Sh ERRORS
 The
 .Fn getosreldate
