--- a/share/man/man5/src.conf.5
+++ b/share/man/man5/src.conf.5
@@ -665,7 +665,7 @@ Set to build bootloaders without Forth support.
 Set to build
 .Nm libc
 without floating-point support.
-.It Va WITHOUT_FREEBSD_UPDATE
+.It Va WITHOUT_MIDNIGHTBSD_UPDATE
 Set to not build
 .Xr freebsd-update 8 .
 .It Va WITHOUT_FTP
