--- a/stand/i386/isoboot/isoboot.8
+++ b/stand/i386/isoboot/isoboot.8
@@ -36,7 +36,7 @@ is used on BIOS-based computers to boot from an ISO image that has
 been written to a USB flash drive or other HDD-like device.
 .Nm
 is installed in a
-.Cm freebsd-boot
+.Cm mnbsd-boot
 partition with
 .Xr mkimg 1 .
 .Sh IMPLEMENTATION NOTES
