--- a/stand/i386/pxeldr/pxeboot.8
+++ b/stand/i386/pxeldr/pxeboot.8
@@ -41,7 +41,7 @@ PXE is a form of smart boot ROM, built into Intel EtherExpress Pro/100 and
 PXE supports DHCP configuration and provides low-level NIC access services.
 .Pp
 The DHCP client will set a DHCP user class named
-.Va FreeBSD
+.Va MidnightBSD
 to allow flexible configuration of the DHCP server.
 .Pp
 The
@@ -75,8 +75,8 @@ max-lease-time 120;
 subnet 10.0.0.0 netmask 255.255.255.0 {
        filename "pxeboot";
        range 10.0.0.10 10.0.0.254;
-       if exists user-class and option user-class = "FreeBSD" {
-            option root-path "tftp://10.0.0.1/FreeBSD";
+       if exists user-class and option user-class = "MidnightBSD" {
+            option root-path "tftp://10.0.0.1/MidnightBSD";
        }
 }
 
