--- a/stand/i386/gptboot/gptboot.8
+++ b/stand/i386/gptboot/gptboot.8
@@ -36,7 +36,7 @@ is used on BIOS-based computers to boot from a UFS partition on a
 GPT-partitioned disk.
 .Nm
 is installed in a
-.Cm freebsd-boot
+.Cm mnbsd-boot
 partition with
 .Xr gpart 8 .
 .Pp
@@ -133,14 +133,14 @@ partition found.
 .Nm
 first reads the partition table.
 All
-.Cm freebsd-ufs
+.Cm mnbsd-ufs
 partitions with only the
 .Cm bootonce
 attribute set, indicating a failed boot, are set to
 .Cm bootfailed .
 .Nm
 then scans through all of the
-.Cm freebsd-ufs
+.Cm mnbsd-ufs
 partitions.
 Boot behavior depends on the combination of
 .Cm bootme
@@ -150,14 +150,14 @@ attributes set on those partitions.
 .Bl -tag -width ".Cm bootonce + .Cm bootme"
 .It Cm bootonce + Cm bootme
 Highest priority: booting is attempted from each of the
-.Cm freebsd-ufs
+.Cm mnbsd-ufs
 partitions with both of these attributes.
 On each partition, the
 .Cm bootme
 attribute is removed and the boot attempted.
 .It Cm bootme
 Middle priority: booting is attempted from each of the
-.Cm freebsd-ufs
+.Cm mnbsd-ufs
 partitions with the
 .Cm bootme
 attribute.
@@ -169,13 +169,13 @@ nor
 .Cm bootme
 attributes are found on any partitions, booting is attempted from the
 first
-.Cm freebsd-ufs
+.Cm mnbsd-ufs
 partition on the disk.
 .Sh POST-BOOT ACTIONS
 The startup script
 .Pa /etc/rc.d/gptboot
 checks the attributes of
-.Cm freebsd-ufs
+.Cm mnbsd-ufs
 partitions on all GPT disks.
 Partitions with the
 .Cm bootfailed
@@ -205,7 +205,7 @@ parameters for the boot blocks
 .Sh EXAMPLES
 .Nm
 is installed in a
-.Cm freebsd-boot
+.Cm mnbsd-boot
 partition, usually the first partition on the disk.
 A
 .Dq protective MBR
