--- a/contrib/libarchive/NEWS
+++ b/contrib/libarchive/NEWS
@@ -1,3 +1,7 @@
+Aug 22, 2021: libarchive 3.5.2 released
+
+Dec 26, 2020: libarchive 3.5.1 released
+
 Dec 01, 2020: libarchive 3.5.0 released
 
 Oct 14, 2020: Support for system extended attributes
