--- a/share/man/man7/mports.7
+++ b/share/man/man7/mports.7
@@ -219,12 +219,12 @@ portion never recurses
 (this is perhaps a bug).
 .It Cm reinstall
 Use this to restore a port after using
-.Xr pkg_delete 1
+.Xr mport 1 delete
 when you should have used
 .Cm deinstall .
 .It Cm deinstall
 Remove an installed port from the system, similar to
-.Xr pkg_delete 1 .
+.Xr mport 1 delete.
 .It Cm deinstall-all
 Remove all installed mports with the same
 .Va PKGORIGIN
@@ -233,10 +233,10 @@ from the system.
 Make a binary package for the port.
 The port will be installed if it has not already been.
 The package is a
-.Pa .tbz
+.Pa .mport
 file that you can use to
 install the port on other machines with
-.Xr pkg_add 1 .
+.Xr mport 1 .
 If the directory specified by
 .Va PACKAGES
 does not exist, the package will be put into the current directory.
@@ -455,15 +455,10 @@ The big Kahuna.
 .El
 .Sh SEE ALSO
 .Xr make 1 ,
-.Xr pkg_add 1 ,
-.Xr pkg_create 1 ,
-.Xr pkg_delete 1 ,
-.Xr pkg_info 1 ,
-.Xr pkg_version 1
+.Xr mport 1 ,
 .Pp
 The following are part of the ports collection:
 .Pp
-.Xr pib 1 ,
 .Xr portaudit 1 ,
 .Xr portcheckout 1 ,
 .Xr portlint 1
