some man page corrections

--- a/share/man/man7/mports.7
+++ b/share/man/man7/mports.7
@@ -450,6 +450,12 @@ The default ports directory
 .It Pa /usr/mports/Mk/bsd.mport.mk
 The big Kahuna.
 .El
+.Sh EXAMPLES
+Build and install Emacs:
+.Bd -literal -offset indent
+cd /usr/mports/editors/emacs
+make install
+.Ed
 .Sh SEE ALSO
 .Xr make 1 ,
 .Xr mport 1 ,
