--- a/contrib/unbound/doc/unbound.8
+++ b/contrib/unbound/doc/unbound.8
@@ -1,4 +1,4 @@
-.TH "unbound" "8" "Dec  3, 2020" "NLnet Labs" "unbound 1.13.0"
+.TH "unbound" "8" "Jun 17, 2019" "NLnet Labs" "unbound 1.9.2"
 .\"
 .\" unbound.8 -- unbound manual
 .\"
@@ -9,7 +9,7 @@
 .\"
 .SH "NAME"
 .B unbound
-\- Unbound DNS validating resolver 1.13.0.
+\- Unbound DNS validating resolver 1.9.2.
 .SH "SYNOPSIS"
 .B unbound
 .RB [ \-h ]
@@ -54,11 +54,11 @@ resolvers are using the same port number (53).
 The available options are:
 .TP
 .B \-h
-Show the version number and commandline option help, and exit.
+Show the version and commandline option help.
 .TP
 .B \-c\fI cfgfile
 Set the config file with settings for unbound to read instead of reading the
-file at the default location, /usr/local/etc/unbound/unbound.conf. The syntax is
+file at the default location, /var/unbound/unbound.conf. The syntax is
 described in \fIunbound.conf\fR(5).
 .TP
 .B \-d
@@ -76,9 +76,6 @@ concurrently.
 .B \-v
 Increase verbosity. If given multiple times, more information is logged.
 This is in addition to the verbosity (if any) from the config file.
-.TP
-.B \-V
-Show the version number and build options, and exit.
 .SH "SEE ALSO"
 \fIunbound.conf\fR(5),
 \fIunbound\-checkconf\fR(8),
