--- a/crypto/openssh/ssh.1
+++ b/crypto/openssh/ssh.1
@@ -34,6 +34,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\" $OpenBSD: ssh.1,v 1.427 2021/09/10 10:26:02 dtucker Exp $
+.\" $FreeBSD$
 .Dd $Mdocdate: September 10 2021 $
 .Dt SSH 1
 .Os
