--- a/crypto/openssh/sshd.8
+++ b/crypto/openssh/sshd.8
@@ -34,6 +34,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\" $OpenBSD: sshd.8,v 1.317 2021/09/10 11:38:38 dtucker Exp $
+.\" $FreeBSD$
 .Dd $Mdocdate: September 10 2021 $
 .Dt SSHD 8
 .Os
